# cursor-snap

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
cursor_snap/: __init__.py  cursor_snap.py
